Fix compiling on older versions